# temporal-optimizer

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ENHANCED_PROMOTION_WITH_VISUALS.md  LICENSE  README.md  RESEARCH.md  TESTING_STATUS.md  consulting_strategy.md  corrected_benchmark.py  index.html  marketing_materials.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  simple_benchmark.py  tox.ini
.github/workflows/: .pre-commit-config.yaml  ci.yml  ci_cd.yml  cleanup.yml  code-quality.yml  lint-and-format.yml  pull-request.yml  release.yml  simple-ci.yml  tests.yml
benchmarks/: README.md  challenging_sgd_stability_test.py  credit_scoring_reproduction.py  llm_sgd_momentum_conservation.py  optimization_comparison.py  research_analysis_summary.py  validated_performance_benchmark.py
docs/: RESEARCH_METHODOLOGY.md  api.rst  api_reference.md  index.rst  quickstart.md  use_cases.md
examples/: advanced_usage.py  pytorch_integration.py
images/: README.md
src/: __init__.py  _init_.py
src/hamiltonian_ai/: data_processing.py  loss_functions.py  models.py  optimizers.py  utils.py
temporal_optimizer/: __init__.py
temporal_optimizer/_internal/: __init__.py
temporal_optimizer/losses/: __init__.py  stable_loss.py
temporal_optimizer/optimizers/: __init__.py  base.py  stable_adam.py  stable_sgd.py
temporal_optimizer/utils/: __init__.py  benchmarks.py  metrics.py
test/: test_data_processing.py  test_loss_functions.py  test_utils.py
tests/: __init__.py  test_basic_import.py  test_data_processing.py  test_loss_functions.py  test_models.py  test_optimizers.py  test_utils.py
tests/test_optimizers/: __init__.py  test_stable_adam.py  test_stable_sgd.py
