[metadata]
name = hamiltonian_ai
version = 0.2.1
author = Javier Marin
author_email = javierl@jmarin.info
description = A Hamiltonian-inspired approach for AI optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Javihaus/hamiltonian_ai
project_urls =
    Bug Tracker = https://github.com/Javihaus/hamiltonian_ai/issues
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    torch>=1.7.0
    numpy>=1.19.0
    scikit-learn>=0.24.0
    imbalanced-learn>=0.8.0

[options.packages.find]
where = src
include = hamiltonian_ai*
